[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/UI/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=2]
[ext_resource path="res://Themes/50Theme.tres" type="Theme" id=3]
[ext_resource path="res://Fonts/drawersketch30.tres" type="DynamicFont" id=4]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=5]
[ext_resource path="res://Icons/Button_Up_Texture.png" type="Texture" id=6]
[ext_resource path="res://Icons/Button_Pressed_Texture.png" type="Texture" id=7]
[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=9]
[ext_resource path="res://Themes/20Theme.tres" type="Theme" id=10]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 4 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="FullMenu"]
visible = false
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 1

[node name="Header" type="HBoxContainer" parent="FullMenu"]
margin_right = 1280.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="LeftMargin2" type="Label" parent="FullMenu/Header"]
margin_right = 20.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="MenuName" type="Label" parent="FullMenu/Header"]
margin_left = 24.0
margin_right = 513.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "options"
align = 1
valign = 1
uppercase = true

[node name="Lead_Char" type="Label" parent="FullMenu/Header"]
margin_left = 517.0
margin_right = 1006.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )

[node name="Exit" type="ColorRect" parent="FullMenu/Header"]
margin_left = 1010.0
margin_right = 1254.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource( 5 )
color = Color( 0, 0, 0, 1 )

[node name="ExitButton" type="TextureButton" parent="FullMenu/Header/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLabel" type="Label" parent="FullMenu/Header/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMargin2" type="Label" parent="FullMenu/Header"]
margin_left = 1258.0
margin_right = 1278.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="TabsContainer" type="HBoxContainer" parent="FullMenu"]
margin_top = 86.0
margin_right = 1280.0
margin_bottom = 696.0
size_flags_vertical = 3

[node name="LeftMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_right = 20.0
margin_bottom = 610.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="CategoryPanel" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 24.0
margin_right = 224.0
margin_bottom = 610.0
rect_min_size = Vector2( 200, 75 )
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Audio" type="ColorRect" parent="FullMenu/TabsContainer/CategoryPanel"]
margin_right = 200.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
size_flags_vertical = 4
theme = ExtResource( 5 )
color = Color( 0, 0, 0, 1 )

[node name="TextureButton" type="TextureButton" parent="FullMenu/TabsContainer/CategoryPanel/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/CategoryPanel/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Audio"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="ColorRect" parent="FullMenu/TabsContainer/CategoryPanel"]
margin_top = 79.0
margin_right = 200.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 75 )
size_flags_vertical = 4
theme = ExtResource( 5 )
color = Color( 0, 0, 0, 1 )

[node name="TextureButton" type="TextureButton" parent="FullMenu/TabsContainer/CategoryPanel/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/CategoryPanel/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Video"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="ColorRect" parent="FullMenu/TabsContainer/CategoryPanel"]
margin_top = 158.0
margin_right = 200.0
margin_bottom = 233.0
rect_min_size = Vector2( 0, 75 )
size_flags_vertical = 4
theme = ExtResource( 5 )
color = Color( 0, 0, 0, 1 )

[node name="TextureButton" type="TextureButton" parent="FullMenu/TabsContainer/CategoryPanel/Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/CategoryPanel/Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Controls"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Misc" type="ColorRect" parent="FullMenu/TabsContainer/CategoryPanel"]
margin_top = 237.0
margin_right = 200.0
margin_bottom = 312.0
rect_min_size = Vector2( 0, 75 )
size_flags_vertical = 4
theme = ExtResource( 5 )
color = Color( 0, 0, 0, 1 )

[node name="TextureButton" type="TextureButton" parent="FullMenu/TabsContainer/CategoryPanel/Misc"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMenu/TabsContainer/CategoryPanel/Misc"]
anchor_top = -0.0234412
anchor_right = 1.0
anchor_bottom = 0.976559
text = "Misc"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="ScrollContainer" parent="FullMenu/TabsContainer"]
margin_left = 228.0
margin_right = 1242.0
margin_bottom = 610.0
rect_min_size = Vector2( 720, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Controls"]
margin_right = 1014.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 1246.0
margin_right = 1256.0
margin_bottom = 610.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="ItemInspector" type="VBoxContainer" parent="FullMenu/TabsContainer"]
visible = false
margin_left = 966.0
margin_right = 1256.0
margin_bottom = 610.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Inspector_Container" type="VBoxContainer" parent="FullMenu/TabsContainer/ItemInspector"]
margin_right = 290.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemName" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_right = 290.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 9 )
align = 1
valign = 1
autowrap = true

[node name="ItemDescription" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_top = 61.0
margin_right = 290.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 10 )
autowrap = true

[node name="SpaceBuffer" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_left = 145.0
margin_top = 99.0
margin_right = 145.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 4
theme = ExtResource( 10 )

[node name="ItemStats" type="HBoxContainer" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_top = 137.0
margin_right = 290.0
margin_bottom = 568.0
size_flags_vertical = 3

[node name="StatsContainer" type="ScrollContainer" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container/ItemStats"]
margin_right = 290.0
margin_bottom = 431.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Stats" type="VBoxContainer" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container/ItemStats/StatsContainer"]
margin_right = 290.0
margin_bottom = 431.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="ItemIcon" type="TextureRect" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container/ItemStats"]
visible = false
margin_left = 230.0
margin_right = 300.0
margin_bottom = 479.0
rect_min_size = Vector2( 70, 70 )
expand = true

[node name="LabelBuffer" type="Label" parent="FullMenu/TabsContainer/ItemInspector"]
margin_top = 572.0
margin_right = 290.0
margin_bottom = 586.0

[node name="ItemInspector2" type="VBoxContainer" parent="FullMenu/TabsContainer/ItemInspector"]
visible = false
margin_top = 307.0
margin_right = 375.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="FullMenu/TabsContainer/ItemInspector/ItemInspector2"]
margin_right = 375.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 9 )
text = "Item Inspector2"

[node name="HBoxContainer" type="HBoxContainer" parent="FullMenu/TabsContainer/ItemInspector/ItemInspector2"]
margin_top = 46.0
margin_right = 375.0
margin_bottom = 285.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="FullMenu/TabsContainer/ItemInspector/ItemInspector2/HBoxContainer"]
margin_right = 301.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="VBoxContainer" parent="FullMenu/TabsContainer/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer"]
margin_right = 301.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Attack" type="HBoxContainer" parent="FullMenu/TabsContainer/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats"]
margin_right = 301.0
margin_bottom = 14.0

[node name="StatName" type="Label" parent="FullMenu/TabsContainer/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats/Attack"]
margin_right = 148.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "ATK"

[node name="StatValue" type="Label" parent="FullMenu/TabsContainer/ItemInspector/ItemInspector2/HBoxContainer/ScrollContainer/Stats/Attack"]
margin_left = 152.0
margin_right = 301.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "500"

[node name="ItemIcon" type="TextureRect" parent="FullMenu/TabsContainer/ItemInspector/ItemInspector2/HBoxContainer"]
margin_left = 305.0
margin_right = 375.0
margin_bottom = 239.0
rect_min_size = Vector2( 70, 70 )
expand = true

[node name="Label" type="Label" parent="FullMenu/TabsContainer/ItemInspector"]
margin_top = 590.0
margin_right = 290.0
margin_bottom = 610.0
rect_min_size = Vector2( 0, 20 )

[node name="Buttons" type="HBoxContainer" parent="FullMenu/TabsContainer/ItemInspector"]
visible = false
margin_top = 512.0
margin_right = 345.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource( 9 )
alignment = 1

[node name="Compare" type="ColorRect" parent="FullMenu/TabsContainer/ItemInspector/Buttons"]
visible = false
margin_right = 170.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="CompareButton" type="TextureButton" parent="FullMenu/TabsContainer/ItemInspector/Buttons/Compare"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompareLabel" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Buttons/Compare"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.58667
margin_bottom = 1.58667
text = "Compare"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="ColorRect" parent="FullMenu/TabsContainer/ItemInspector/Buttons"]
margin_right = 345.0
margin_bottom = 105.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="DeleteButton" type="TextureButton" parent="FullMenu/TabsContainer/ItemInspector/Buttons/Delete"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteLabel" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Buttons/Delete"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Delete"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 610.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="BottomMargin" type="Label" parent="FullMenu"]
margin_top = 700.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 1
[connection signal="button_up" from="FullMenu/Header/Exit/ExitButton" to="." method="_on_ExitButton_button_up"]
[connection signal="button_up" from="FullMenu/TabsContainer/CategoryPanel/Audio/TextureButton" to="." method="_on_Weapons_button_up"]
[connection signal="button_up" from="FullMenu/TabsContainer/CategoryPanel/Video/TextureButton" to="." method="_on_Weapons_button_up"]
[connection signal="button_up" from="FullMenu/TabsContainer/CategoryPanel/Controls/TextureButton" to="." method="_on_Controls_button_up"]
[connection signal="button_up" from="FullMenu/TabsContainer/CategoryPanel/Misc/TextureButton" to="." method="_on_Weapons_button_up"]
